# diferencia

./: LICENSE  README.md  diferencia.cabal  stack.yaml
src/: Diferencia.hs
