name:                diferencia
version:             0.1.0.0
synopsis:            A generic, efficient, and typesafe, expression diffing algorithm
description:         A generic, efficient, and typesafe, expression diffing algorithm
homepage:            https://github.com/ajnsit/diferencia
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Diferencia
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , these
                     , MemoTrie
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajnsit/diferencia
